--- a/src/app/components/lista-usuarios/lista-usuarios.component.html
+++ b/src/app/components/lista-usuarios/lista-usuarios.component.html
@@ -1,1 +1,18 @@
-<p>lista-usuarios works!</p>
+<h1>Usuarios</h1>
+<hr>
+
+<ul class="list-group">
+    <li *ngFor="let item of usuariosActivosObs | async" class="list-group-item" >
+
+        {{ item.nombre }}
+
+        <span class="badge badge-primary">
+            {{ item.sala }}
+        </span>
+        <br>
+        <span class="badge badge-info">
+            {{ item.id }}
+        </span>
+    </li>
+</ul>
+
